--- a/slider.html
+++ b/slider.html
@@ -12,9 +12,8 @@
 
     <div class="container-fluid">
         <div id="slider-context" class="row bg-dark overflow sliderParentRow" onmousewheel="scrollFunc(event)">
-            
         </div>
+        <div id="sliderPagination"></div>
     </div>
-
 </body>
 </html>
